--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
     "react-spring": "^9.6.1",
+    "react-type-animation": "^2.1.2",
+    "sass-loader": "^13.2.0",
     "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
